Gramatica.txt
<Exp> ::= <Term> ((MINUS | PLUS) <Term>)*
<Exp> ::= [LET] ID EQ <Exp>
<Exp> ::= <Exp> (AND | OR) <Exp>
<Term> ::= <Factor> ((MUL | DIV) <Factor>)*
<Factor> ::= (PLUS | MINUS)* <Factor>
<Factor> ::= <Pow>
<Pow> ::= <Atom> (<Pow> <Factor>)*
<Atom> ::= INT | FLOAT | STRING | ID | <ListExp> | LPAR <Exp> RPAR | BOOL
<ListExp> ::= LSQUARE [ <Exp> (COMMA <Exp>)* ] RSQUARE
<TupleExp> ::= LPAR <Exp> COMMA <Exp> (COMMA <Exp)*  RPAR
<Bool> ::= "true" | "false"
<TernaryConditional> ::= <Exp> QUESTION <Exp> COLON <Exp>
<WhileExp> ::= [WHILE] LPAR <Exp>* RPAR <Exp>* LBRACE <Exp>* RBRACE

PLUS é o +
MUL é o *
DIV é o /
MINUS é o -
POW é o ^
LPAR é o (
RPAR é o )
INT é um inteiro qualquer
FLOAT é um float qualquer
ID é qualquer identificador
LET é a palavra reservada let
STRING algo entre aspas
QUESTION é ?
COLON é :
LBRACE é o {
RBRACE é o }
